--- a/app/src/main/res/layout/item_review_image.xml
+++ b/app/src/main/res/layout/item_review_image.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    app:cardCornerRadius="5dp"
-    android:layout_margin="3dp">
+    android:layout_margin="3dp"
+    app:cardCornerRadius="5dp">
 
     <ImageView
+        android:id="@+id/img_review_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:background="@drawable/img_3" />
