--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,27 +1,287 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeActivity">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/imageview_topbar"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <ImageView
-        android:id="@+id/imageview_topbar"
-        android:layout_width="336dp"
-        android:layout_height="36dp"
-        android:background="@drawable/topbar_android_4x"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".home.HomeActivity">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageview_topbar"
+                android:layout_width="336dp"
+                android:layout_height="36dp"
+                android:background="@drawable/topbar_android_4x"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/toolbar_home" />
+
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tablayout_home_category"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageview_topbar"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/red"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/red"
+                app:tabTextAppearance="@font/notosanskr_bold"
+                app:tabTextColor="@color/black2">
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="34dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_one"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="47dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_two"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="47dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_three"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="52dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_four"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="60dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_five"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="60dp"
+                    android:layout_height="42dp"
+                    android:text="@string/category_six"/>
+            </com.google.android.material.tabs.TabLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tablayout_home_sub"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/tab_background_selector"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tablayout_home_category"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/gray_5" >
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="판매랭킹"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="리뷰 베스트"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="실시간랭킹"/>
+            </com.google.android.material.tabs.TabLayout>
+
+            <TextView
+                android:id="@+id/textview_today_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/notosanskr_bold"
+                android:text="오늘의 도움 리뷰"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tablayout_home_sub" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleimage_i"
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:layout_marginLeft="2dp"
+                android:background="@drawable/ic_info"
+                app:layout_constraintBottom_toBottomOf="@id/textview_today_review"
+                app:layout_constraintStart_toEndOf="@id/textview_today_review"
+                app:layout_constraintTop_toTopOf="@id/textview_today_review" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_best"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="베스트"
+                android:textColor="@color/mint"
+                app:chipStrokeColor="@color/mint"
+                app:chipStrokeWidth="2dp"
+                app:chipBackgroundColor="@color/white"
+                app:checkedIconEnabled="true"
+                android:theme="@style/Platform.MaterialComponents.Light"
+                app:layout_constraintStart_toStartOf="@+id/textview_today_review"
+                app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_themore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="더모코스메틱"
+                app:chipStrokeWidth="2dp"
+                app:chipStrokeColor="@color/gray_6"
+                android:textColor="@color/gray_6"
+                app:chipBackgroundColor="@color/white"
+                android:theme="@style/Platform.MaterialComponents.Light"
+                app:layout_constraintStart_toEndOf="@id/chip_best"
+                app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_skincare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="스킨케어"
+                app:chipStrokeWidth="2dp"
+                app:chipStrokeColor="@color/gray_6"
+                android:textColor="@color/gray_6"
+                app:chipBackgroundColor="@color/white"
+                android:theme="@style/Platform.MaterialComponents.Light"
+                app:layout_constraintStart_toEndOf="@id/chip_themore"
+                app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_bodycare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="바디케어"
+                app:chipStrokeWidth="2dp"
+                app:chipStrokeColor="@color/gray_6"
+                android:textColor="@color/gray_6"
+                app:chipBackgroundColor="@color/white"
+                android:theme="@style/Platform.MaterialComponents.Light"
+                app:layout_constraintStart_toEndOf="@id/chip_skincare"
+                app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_haircare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="헤어케어"
+                app:chipStrokeWidth="2dp"
+                app:chipStrokeColor="@color/gray_6"
+                android:textColor="@color/gray_6"
+                app:chipBackgroundColor="@color/white"
+                android:theme="@style/Platform.MaterialComponents.Light"
+                app:layout_constraintStart_toEndOf="@id/chip_bodycare"
+                app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constaintlayout_home_reviewer"
+                android:layout_width="match_parent"
+                android:layout_height="243dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/gray_review_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/chip_bodycare">
+
+                <ImageView
+                    android:id="@+id/imageview_home_reviewer"
+                    android:layout_width="180dp"
+                    android:layout_height="227dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/banner1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imageview_item_first"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageview_item_first"
+                    android:layout_width="180dp"
+                    android:layout_height="227dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="7dp"
+                    android:background="@drawable/card1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageview_home_reviewer"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ImageView
+                android:id="@+id/imageview_item_two"
+                android:layout_width="180dp"
+                android:layout_height="227dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/card2"
+                app:layout_constraintEnd_toStartOf="@+id/imageview_item_third"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/constaintlayout_home_reviewer" />
+
+            <ImageView
+                android:id="@+id/imageview_item_third"
+                android:layout_width="180dp"
+                android:layout_height="227dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/card3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageview_item_two"
+                app:layout_constraintTop_toBottomOf="@id/constaintlayout_home_reviewer" />
+
+            <ImageView
+                android:id="@+id/imageview_item_fourth"
+                android:layout_width="180dp"
+                android:layout_height="227dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/card4"
+                app:layout_constraintEnd_toStartOf="@+id/imageview_item_five"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageview_item_two" />
+
+            <ImageView
+                android:id="@+id/imageview_item_five"
+                android:layout_width="180dp"
+                android:layout_height="227dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/card5"
+                android:layout_marginLeft="7dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageview_item_fourth"
+                app:layout_constraintTop_toBottomOf="@id/imageview_item_third" />
+
+            <ImageView
+                android:id="@+id/footer_bottom_home"
+                android:layout_width="match_parent"
+                android:layout_height="326dp"
+                android:background="@drawable/footer_bottom"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/imageview_item_fourth"
+                app:layout_constraintStart_toStartOf="parent"/>
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
+
+
