--- a/app/src/main/res/layout/item_cosmetic.xml
+++ b/app/src/main/res/layout/item_cosmetic.xml
@@ -10,8 +10,10 @@
         android:layout_height="108dp"
         android:layout_marginRight="4dp"
         android:background="@drawable/cos_one"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
