--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,43 +39,18 @@
                 android:layout_height="42dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imageview_topbar"
-                app:tabGravity="fill"
                 app:tabIndicatorColor="@color/red"
-                app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/red"
-                app:tabTextAppearance="@font/notosanskr_bold"
-                app:tabTextColor="@color/black2">
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="34dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_one"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="47dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_two"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="47dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_three"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="52dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_four"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="60dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_five"/>
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="60dp"
-                    android:layout_height="42dp"
-                    android:text="@string/category_six"/>
+                style="@style/Tablayout.Appearance"
+                app:tabTextColor="@color/selector_tablayout_text">
+
             </com.google.android.material.tabs.TabLayout>
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tablayout_home_sub"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/tab_background_selector"
+                app:tabIndicator="@null"
+                app:tabBackground="@drawable/tab_background_selector"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tablayout_home_category"
                 app:tabGravity="fill"
